Phase 5: Players in world